[gd_scene load_steps=14 format=3 uid="uid://bfj4c1tyln6a1"]

[ext_resource type="PackedScene" uid="uid://bv1v81aa2q4gw" path="res://map/map.tscn" id="1_e3u6v"]
[ext_resource type="Script" uid="uid://dvrm3wi684owy" path="res://maps/sentinel_map.gd" id="2_asbfi"]
[ext_resource type="PackedScene" uid="uid://bin6wnaw5ta86" path="res://map/transition.tscn" id="2_autn2"]
[ext_resource type="PackedScene" uid="uid://40nlohv2xows" path="res://test/platform.tscn" id="3_asbfi"]
[ext_resource type="PackedScene" uid="uid://dcrah5vg0thhx" path="res://enemies/sentinel.tscn" id="5_asbfi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n13sd"]
size = Vector2(77, 1475)

[sub_resource type="Animation" id="Animation_asbfi"]
resource_name = "initiate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1538, 242), Vector2(1538, 1282)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.433333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shake_camera"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SentinelWait")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.73333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.0],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_n13sd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1538, 242)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sentinel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_oggui"]
resource_name = "charge_from_left"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.54, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1538, 1280), Vector2(1538, 1280), Vector2(3942, 1280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sentinel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.22, 0.28, 0.39, 0.47, 0.54),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.127488, 0.118565, -0.0892912, 0.162917, -0.145781, 0.178953, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_hvvew"]
resource_name = "charge_from_right"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3942, 1280), Vector2(3942, 1280), Vector2(1538, 1280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sentinel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0696413, 0.119696, 0.161046, 0.215453, 0.274213, 0.339501, 0.409143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.152004, 0.233154, -0.217068, 0.179062, -0.250883, 0.242355, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_h5faq"]
resource_name = "jump_from_left"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.402614, 0.700766, 0.996741, 1.99131),
"transitions": PackedFloat32Array(0.366021, 2.92817, 1, 1, 1),
"update": 0,
"values": [Vector2(3942, 1280), Vector2(3248, 595), Vector2(2830, 1284), Vector2(2830, 1284), Vector2(1474, 1284)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shake_camera"
}, {
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_qffsu"]
resource_name = "jump_from_left"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sentinel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.398261, 0.7, 0.700766, 1.00327, 1.99784),
"transitions": PackedFloat32Array(0.297302, 2.63902, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1538, 1280), Vector2(2094, 582), Vector2(2660, 1262), Vector2(2655, 1285), Vector2(2655, 1285), Vector2(3920, 1285)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shake_camera"
}, {
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oggui"]
_data = {
&"RESET": SubResource("Animation_n13sd"),
&"charge_from_left": SubResource("Animation_oggui"),
&"charge_from_right": SubResource("Animation_hvvew"),
&"initiate": SubResource("Animation_asbfi"),
&"jump_from_left": SubResource("Animation_qffsu"),
&"jump_from_right": SubResource("Animation_h5faq")
}

[node name="Map" instance=ExtResource("1_e3u6v")]
script = ExtResource("2_asbfi")

[node name="ToSentinel" parent="Transitions" index="0" instance=ExtResource("2_autn2")]
position = Vector2(5064, 1280)
target_location = "start"

[node name="Platform" parent="Environment" index="0" instance=ExtResource("3_asbfi")]
position = Vector2(2351, 1299)
scale = Vector2(59.84, 1)

[node name="Platform2" parent="Environment" index="1" instance=ExtResource("3_asbfi")]
position = Vector2(4644, 1051)
scale = Vector2(10.626, 1)

[node name="Platform5" parent="Environment" index="2" instance=ExtResource("3_asbfi")]
position = Vector2(763, 1051)
scale = Vector2(10.626, 1)

[node name="Platform3" parent="Environment" index="3" instance=ExtResource("3_asbfi")]
position = Vector2(4175, 394)
scale = Vector2(0.717673, 32.9729)

[node name="Platform4" parent="Environment" index="4" instance=ExtResource("3_asbfi")]
position = Vector2(1225, 394)
scale = Vector2(0.717673, 32.9729)

[node name="SentinelTrigger" type="Area2D" parent="." index="4"]
position = Vector2(3206, 1191)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SentinelTrigger" index="0"]
position = Vector2(-514, -630)
shape = SubResource("RectangleShape2D_n13sd")

[node name="Sentinel" parent="." index="5" instance=ExtResource("5_asbfi")]
position = Vector2(1538, 242)

[node name="SentinelWait" type="Timer" parent="." index="6"]
one_shot = true

[node name="SentinelMoves" type="AnimationPlayer" parent="." index="7"]
libraries = {
&"": SubResource("AnimationLibrary_oggui")
}

[node name="CameraHook" type="Node2D" parent="." index="8"]
position = Vector2(2695, 957)

[connection signal="body_entered" from="SentinelTrigger" to="." method="_on_sentinel_trigger_body_entered"]
[connection signal="timeout" from="SentinelWait" to="." method="_on_sentinel_wait_timeout"]
